@@ -59,6 +59,10 @@ lintian (2.1.3) UNRELEASED; urgency=low
   * lib/Lintian/Data.pm:
     + [RA] New all() method that returns all valid keywords.
 
+  * lib/Read_pkglists.pm:
+    + [JP] Add a new "source version" field to binary and udeb info files.
+      Bump binary and udeb format version to 3 and 2 respectively.
+
   * reporting/templates/maintainer.tmpl:
     + [ADB] Print tags affecting udeb packages under a heading for that
       package, rather than merging them in to whichever binary package
@@ -67,6 +71,9 @@ lintian (2.1.3) UNRELEASED; urgency=low
     + [ADB] Separate tags affecting a binary package from those of a source
       package with the same name when the binary is the first package produced
       from the source for which there are issues.
+
+  * unpack/list-{bin,udeb}pkg:
+    + [JP] Extract source package version from source field.
 
  -- Adam D. Barratt <adam@adam-barratt.org.uk>  Sun, 14 Dec 2008 17:20:38 +0000
 
